Adjust _ctx from /crm-web/  into /*[[@{/}]]*/ '': For search order and all relative files which are necessary.

--- a/web/src/main/webapp/WEB-INF/templates/editCustomerStatus_khoa.html
+++ b/web/src/main/webapp/WEB-INF/templates/editCustomerStatus_khoa.html
@@ -14,6 +14,8 @@
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/editStatusCustomer.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/customerDetail.css}">
+
+<th:block th:include="fragments/head"></th:block>
 </head>
 </head>
 <body
