--- a/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
@@ -12,6 +12,8 @@
 <!-- END COMMON CSS -->
 
 <link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
+
+<th:block th:include="fragments/head"></th:block>
 </head>
 
 <body
