--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -17,6 +17,8 @@
         height: 15px; /* Chiều cao biểu tượng mũi tên */
     }
     </style>
+    
+    <th:block th:include="fragments/head"></th:block>
 </head>
 <body>
     <th:block th:include="fragments/hmenu"></th:block>
