--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{resources/css/ordersBtnHorizontalMenu.css}">	
 	<link rel="stylesheet" type="text/css" th:href="@{resources/css/new_style.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{resources/css/order.css}">
+	<th:block th:include="fragments/head"></th:block>
 </head>
 
 <body
