--- a/web/src/main/webapp/WEB-INF/templates/ordersConfiguration-StatusCRMScreen_ky.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfiguration-StatusCRMScreen_ky.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/order.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/orders-configuration.css}">
+<th:block th:include="fragments/head"></th:block>
 </head>
 <body
 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
