--- a/web/src/main/webapp/WEB-INF/templates/addCustomer_v1.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer_v1.html
@@ -11,6 +11,7 @@
 <!-- END COMMON CSS -->
 
 <link rel="stylesheet" type="text/css" href="resources/css/add-customer-style.css">
+<th:block th:include="fragments/head"></th:block>
 </head>
 
 <body
