--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -12,6 +12,8 @@
 
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/customerDetail.css}" />
+	
+	<th:block th:include="fragments/head"></th:block>
 </head>
 
 <body class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" data-open="click"
