--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -6,6 +6,8 @@
 <th:block th:include="fragments/common_css"></th:block>
 
 <link rel="stylesheet" type="text/css" href="resources/css/customerInteraction.css">
+
+<th:block th:include="fragments/head"></th:block>
 </head>
 <body
 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
