--- a/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/status.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
+
+<th:block th:include="fragments/head"></th:block>
 </head>
 <!-- class="vertical-layout vertical-compact-menu menu-expanded fixed-navbar" Bỏ khoảng trống ở dòng bên trái, dòng này đặt ngay dưới "<body" -->
 <body
