--- a/web/src/main/webapp/WEB-INF/templates/feedback.html
+++ b/web/src/main/webapp/WEB-INF/templates/feedback.html
@@ -32,6 +32,8 @@
 <!-- responsive style -->
 <link href="resources/feedback/css/responsive.css" rel="stylesheet" />
 
+<th:block th:include="fragments/head"></th:block>
+
 </head>
 
 <body>
