--- a/web/src/main/webapp/WEB-INF/templates/historyUpdate.html
+++ b/web/src/main/webapp/WEB-INF/templates/historyUpdate.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
 <link rel="stylesheet" type="text/css" href="resources/css/status.css">
 <link rel="stylesheet" type="text/css" href="resources/css/buttonGroupFunction.css">
+
+<th:block th:include="fragments/head"></th:block>
 <style>
         body {
             font-family: Arial, sans-serif;
