--- a/web/src/main/webapp/WEB-INF/templates/home.html
+++ b/web/src/main/webapp/WEB-INF/templates/home.html
@@ -6,6 +6,8 @@
 	<title>The generated source code Web Application for Sakai</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	
+	<th:block th:include="fragments/head"></th:block>
 </head>
 
 <body>
