--- a/web/src/main/webapp/WEB-INF/templates/main.html
+++ b/web/src/main/webapp/WEB-INF/templates/main.html
@@ -5,7 +5,8 @@
     <th:block th:include="fragments/common_meta_title"></th:block>
     <th:block th:include="fragments/head"></th:block>
     <th:block th:include="fragments/common_css"></th:block>
-<!--     <th:block th:include="fragments/head"></th:block> -->
+    
+	<th:block th:include="fragments/head"></th:block>
 </head>
 <body>
     <th:block th:include="fragments/hmenu"></th:block>
