--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{resources/css/ordersBtnHorizontalMenu.css}">	
 	<link rel="stylesheet" type="text/css" th:href="@{resources/css/new_style.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{resources/css/order.css}">
+	<th:block th:include="fragments/head"></th:block>
 </head>
 <body
 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
