--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerDan.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerDan.html
@@ -21,7 +21,7 @@
     					</script>
 						<div class="card-content">
 							<div class="card-body">
-							<form action="/crm-web/customer/create-customer_dan" method="post" th:object="${customer}">
+							<form th:action="@{/customer/create-customer_dan}" method="post" th:object="${customer}">
 							
 							<div th:if="${errorMessage}" style="color: red;">
         <p th:text="${errorMessage}"></p>
@@ -49,7 +49,7 @@
 					
 					            <div class="form-group">
 					                <label for="address">Địa Chỉ:</label>
-					                <input type="text" class="form-control" id="address" name="address" th:field="*{address}">
+					                <input type="text" class="form-control" id="address" name="address" th:field="*{address}" required>
 					            </div>
 					
 					            <div class="form-group">
