Check latest code from SE team and Update UI for buttonGroupFunction

--- a/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
@@ -3,15 +3,15 @@
 		<p class="quantity-check">0</p>
 		<p class="check">Đã chọn</p>
 		<p class="quit">Bỏ chọn</p>
-		<button type="button" class="btn">Gửi Email</button>
-		<button type="button" class="btn">Gửi SMS</button>
-		<button type="button" class="btn">Tạo Cơ Hội</button>
-		<button type="button" class="btn">Tạo Công Việc</button>
-		<button type="button" class="btn">Mối Quan Hệ</button>
-		<button type="button" class="btn">Nhóm Khách Hàng</button>
-		<button type="button" class="btn">Nguồn Khách Hàng</button>
-		<button type="button" class="btn">Người Xem</button>
-		<button type="button" class="btn" id="deleteBtn">Xóa Nhiều</button>
+		<button type="button" class="btn-btnGroupFunction">Gửi Email</button>
+		<button type="button" class="btn-btnGroupFunction">Gửi SMS</button>
+		<button type="button" class="btn-btnGroupFunction">Tạo Cơ Hội</button>
+		<button type="button" class="btn-btnGroupFunction">Tạo Công Việc</button>
+		<button type="button" class="btn-btnGroupFunction">Mối Quan Hệ</button>
+		<button type="button" class="btn-btnGroupFunction">Nhóm Khách Hàng</button>
+		<button type="button" class="btn-btnGroupFunction">Nguồn Khách Hàng</button>
+		<button type="button" class="btn-btnGroupFunction">Người Xem</button>
+		<button type="button" class="btn-btnGroupFunction" id="deleteBtn">Xóa Nhiều</button>
 	</div>
 </div>
 
