--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
@@ -33,7 +33,7 @@
 <!-- 							</button> -->
 							
 							<!-- Thay đổi nút Thêm khách hàng -->
-							<a th:href = "@{/customer/add}">
+							<a th:href = "@{/customer/add_dan}">
 								<button class="addCustomerbtn">
 									<!-- onclick="window.location.href='/crm-web/add-customer-dan'"> -->
 									<i class="fa-solid fa-plus"></i> Thêm mới khách hàng
