Sửa giao diện trang chủ

--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -23,6 +23,9 @@
 	<!-- Header Section -->
  	<th:block th:include="fragments/home/sidebar"></th:block>
  	
+ 	<!-- navbar Section -->
+ 	<!-- <th:block th:include="fragments/home/navbar"></th:block> -->
+ 	
 	<!-- Thumbnail Carousel Section -->
 	<th:block th:include="fragments/home/content"></th:block>
 	
