--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
@@ -1,3 +1,288 @@
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<style>
+    .content-body {
+      	width: 70%; /* Đặt chiều rộng cho phần tử */
+      	margin: 10px auto 3px auto;
+      	border: 1px solid #333; /* Đường gạch dọc bên trái */
+      	border-radius: 20px;
+    }
+    
+    .crm-container {
+      	background-color: #FFDEDE;
+      	border-left: groove 1px #333;
+      	border-right: groove 1px #333;
+      	border-radius: 20px;
+      	padding: 20px;
+      	padding-bottom: 0px;
+      	overflow: hidden;
+      	margin-top : -30px;
+      	margin-bottom : 30px;
+    }
+    .img {
+    	border-radius: 20px;
+    }
+    
+    .crm-title {
+      	font-size: 2.2rem;
+      	font-weight: bold;
+      	color: #1d4ed8;
+    }
+    .crm-description {
+      	margin-bottom: 20px;
+    }
+     
+    .icon-wrapper {
+      	font-size: 2rem;
+      	margin-bottom: 10px;
+    }
+    .feature-card {
+      	background-color: #ffffff;
+      	border-radius: 20px;
+      	padding: 20px;
+      	transition: transform 0.2s;
+    }
+    .feature-card:hover {
+      	transform: translateY(-5px);
+    }
+    .learn-more {
+      	color: #1d4ed8;
+      	text-decoration: none;
+      	font-weight: bold;
+    }
+    .learn-more:hover {
+      	text-decoration: underline;
+    }
+</style>
+
+<div class = "content-body">
+<!-- Content 1 CRM -->
+  <div id="section1" class="container mt-5 ">
+    <div class="crm-container" >
+      <div class="row">
+        <!-- Khung bên trái để chèn ảnh -->
+        <div class="col-md-4 image-wrapper">
+        	<h1 class="crm-title"></h1><br>
+            <img src="resources/Image/crm01.png" alt="imageCRM" class="img-fluid img"><br>
+            <p class="crm-description">Làm chủ bộ công cụ Quản lý & Chăm sóc khách hàng toàn diện</p>
+        </div>
+       
+        <!-- Khung nội dung bên phải -->
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">👤</div>
+                <h5 class="text-center">Quản lý danh sách khách hàng</h5>
+                <p class="text-center"> Nắm bắt toàn bộ thông tin về khách hàng, lịch sử giao dịch, tương tác, giá trị hợp đồng,.. duy nhất trên 1 nền tảng</p>
+                <a href="#" class=" learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card">
+                <div class="icon-wrapper text-center">🗺️</div>
+                <h5 class="text-center">Quản lý hành trình khách hàng</h5>
+                <p class="text-center">Xây dựng hành trình trải nghiệm khách hàng từ lúc tiếp nhận đến chăm sóc Trước - Trong - Sau bán.</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">📊</div>
+                <h5 class="text-center">Đo lường tỷ lệ chuyển đổi</h5>
+                <p class="text-center">Ghi nhận khả năng và hiệu quả chuyển đổi từ các kênh khác nhau</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">🌐</div>
+                <h5 class="text-center">Social CRM</h5>
+                <p class="text-center">Tích hợp các kênh bán hàng trên mạng xã hội (Fanpage & Zalo OA) với hệ thống CRM, lưu trữ và quản lý thông tin khách hàng</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Content 2 Quản lý mua hàng-->
+  <div id="section1" class="container mt-5 ">
+    <div class="crm-container " style="background-color:#307690" >
+      <div class="row">
+        <!-- Khung bên trái để chèn ảnh -->
+        <div class="col-md-8 ">
+
+          <div class="row">
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">👤</div>
+                <h5 class="text-center">Quản lý danh sách khách hàng</h5>
+                <p class="text-center"> bắt toàn bộ thông tin về khách hàng, lịch sử giao dịch, tương tác, giá trị hợp đồng...</p>
+                <a href="#" class=" learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card">
+                <div class="icon-wrapper text-center">🗺️</div>
+                <h5 class="text-center">Quản lý hành trình khách hàng</h5>
+                <p class="text-center">Xây dựng hành trình trải nghiệm khách hàng từ lúc tiếp nhận đến chăm sóc Trước - Trong - Sau bán.</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">📊</div>
+                <h5 class="text-center">Đo lường tỷ lệ chuyển đổi</h5>
+                <p class="text-center">Ghi nhận khả năng và hiệu quả chuyển đổi từ các kênh khác nhau...</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">🌐</div>
+                <h5 class="text-center">Social CRM</h5>
+                <p class="text-center">Tích hợp các kênh bán hàng trên mạng xã hội với hệ thống CRM...</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Khung nội dung bên phải -->
+        <div class="col-md-4 image-wrapper">
+        	<h1 class="crm-title" style="color:#FFF" >Quản Lý Mua Hàng </h1>
+            <img src="resources/Image/crm03.jpg" alt="imageCRM" class="img-fluid img"><br>
+            <p class="crm-description" style="color:#FFF">Làm chủ bộ công cụ Quản lý & Chăm sóc khách hàng toàn diện</p>
+        </div>
+        
+        
+      </div>
+    </div>
+  </div>
+
+<!-- Content 3 Chăm sóc khách hàng-->
+  <div id="section1" class="container mt-5 ">
+    <div class="crm-container" style="background-color:#ECEAE4">
+      <div class="row">
+        <!-- Khung bên trái để chèn ảnh -->
+        <div class="col-md-4 image-wrapper">
+        	<h1 class="crm-title">Chăm Sóc Khách Hàng</h1>
+            <img src="resources/Image/crm02.png" alt="imageCRM" class="img-fluid img">
+            <p class="crm-description">Làm chủ bộ công cụ Quản lý & Chăm sóc khách hàng toàn diện</p>
+        </div>
+        
+        <!-- Khung nội dung bên phải -->
+        <div class="col-md-8">
+
+          <div class="row">
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">👤</div>
+                <h5 class="text-center">Quản lý danh sách khách hàng</h5>
+                <p class="text-center"> bắt toàn bộ thông tin về khách hàng, lịch sử giao dịch, tương tác, giá trị hợp đồng...</p>
+                <a href="#" class=" learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card">
+                <div class="icon-wrapper text-center">🗺️</div>
+                <h5 class="text-center">Quản lý hành trình khách hàng</h5>
+                <p class="text-center">Xây dựng hành trình trải nghiệm khách hàng từ lúc tiếp nhận đến chăm sóc Trước - Trong - Sau bán.</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">📊</div>
+                <h5 class="text-center">Đo lường tỷ lệ chuyển đổi</h5>
+                <p class="text-center">Ghi nhận khả năng và hiệu quả chuyển đổi từ các kênh khác nhau...</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">🌐</div>
+                <h5 class="text-center">Social CRM</h5>
+                <p class="text-center">Tích hợp các kênh bán hàng trên mạng xã hội với hệ thống CRM...</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Content 4  KPI-->
+  <div id="section1" class="container mt-5 ">
+    <div class="crm-container " style="background-color:#F5EBA1" >
+      <div class="row">
+        <!-- Khung bên trái để chèn ảnh -->
+        <div class="col-md-8 ">
+
+          <div class="row">
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">👤</div>
+                <h5 class="text-center">KPI bán hàng</h5>
+                <p class="text-end"> KPI sản phẩm + Khách hàng + Telesale <br>Theo dõi số lượng khách hàng đăng ký thông tin, thống kê tỷ lệ chuyển đổi và biế</p>
+                <a href="#" class=" learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card">
+                <div class="icon-wrapper text-center">🗺️</div>
+                <h5 class="text-center">Quản lý hành trình khách hàng</h5>
+                <p class="text-center">Xây dựng hành trình trải nghiệm khách hàng từ lúc tiếp nhận đến chăm sóc Trước - Trong - Sau bán.</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">📊</div>
+                <h5 class="text-center">Đo lường tỷ lệ chuyển đổi</h5>
+                <p class="text-center">Ghi nhận khả năng và hiệu quả chuyển đổi từ các kênh khác nhau...</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+            
+            <div class="col-md-6 col-lg-6 mb-2">
+              <div class="feature-card ">
+                <div class="icon-wrapper text-center">🌐</div>
+                <h5 class="text-center">Social CRM</h5>
+                <p class="text-center">Tích hợp các kênh bán hàng trên mạng xã hội với hệ thống CRM...</p>
+                <a href="#" class="learn-more">Xem ngay →</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Khung nội dung bên phải -->
+        <div class="col-md-4 image-wrapper">
+        	<h1 class="crm-title" style="color:#000" >KPI </h1>
+            <img src="resources/Image/crm04.png" alt="imageCRM" class="img-fluid img"><br>
+            <p class="crm-description" style="color:#000">Thiết lập 10 báo cáo thông kê KPI, đo lường hiệu quả hoạt động toàn doanh nghiệp</p>
+        </div>
+        
+        
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
 <section class="container my-5">
 		<div id="thumbnailCarousel" class="carousel slide"
 			data-bs-ride="carousel">
