Update homepage intro sidebar.html

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/sidebar.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/sidebar.html
@@ -1,13 +1,22 @@
-	<header
-		class="text-center bg-success text-white py-5 card-header text-white">
-		<div class="container text-white">
-			<h1 class="display-4 fw-bold card-header text-white">CRM</h1>
-			<p class="lead text-white">Quản Lý & Chăm Sóc Khách Hàng Toàn
-				Diện</p>
-			<p>
-				Quản lý khép kín quy trình Trước - Trong - Sau bán hàng.<br>
-				Nền tảng CRM đầu tiên mở rộng tính năng đa nhiệm kiểm soát mọi hoạt
-				động của doanh nghiệp.
-			</p>
+
+<style>
+.custom-bg {
+	background-color: #0b43e2;
+}
+
+.fw-extra-bold {
+	font-weight: 900;
+}
+</style>
+<header
+	class="text-center custom-bg rounded-pill text-white py-5 card-header text-white">
+	<div class="container text-white">
+		<h1 class="display-4 fw-extra-bold custom-bg card-header text-white">CRM Quản Lý & Chăm Sóc Khách Hàng Toàn
+				Diện</h1>
+		<div class="pt-6">
+			Quản lý khép kín quy trình Trước - Trong - Sau bán hàng.<br> 
+			Nền tảng CRM đầu tiên mở rộng tính năng đa nhiệm kiểm soát mọi hoạt động
+			của doanh nghiệp.
 		</div>
-	</header>
+	</div>
+</header>
