--- a/web/src/main/webapp/WEB-INF/templates/fragments/contentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/contentWrapperCRM.html
@@ -8,7 +8,7 @@
 	<div class="content-wrapper">
 		<div class="content-header row">
 			<div class="content-header-left col-md-6 col-12 mb-2">
-				<h3 class="content-header-title">Khách hàng</h3>
+				<h3 class="content-header-title">Quản lý khách hàng</h3>
 				<div class="row breadcrumbs-top">
 					<div class="breadcrumb-wrapper col-12">
 						<ol class="breadcrumb">
