--- a/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderStatusModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderStatusModal.html
@@ -5,7 +5,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header" style="background-color: #003a6b">
-                	<h3 id="orderIdForUpdateStatus" style="color: white">ID của đơn hàng: <span id="orderIdUpdateStatus"></span></h3>
+                	<h3 id="orderIdForUpdateStatus" style="color: white; display: none;">ID của đơn hàng: <span id="orderIdUpdateStatus"></span></h3>
                     <br><h5 class="modal-title" id="exampleModalLabel" style="color: white">Cập Nhật Trạng Thái Đơn Hàng</h5></br>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true" style="color: white" onclick="closeUpdateOrderStatusModal()">&times;</span>
