--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/sidebar.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/sidebar.html
@@ -1,22 +1,15 @@
-
-<style>
-.custom-bg {
-	background-color: #0b43e2;
-}
-
-.fw-extra-bold {
-	font-weight: 900;
-}
-</style>
-<header
-	class="text-center custom-bg rounded-pill text-white py-5 card-header text-white">
-	<div class="container text-white">
-		<h1 class="display-4 fw-extra-bold custom-bg card-header text-white">CRM Quản Lý & Chăm Sóc Khách Hàng Toàn
-				Diện</h1>
-		<div class="pt-6">
-			Quản lý khép kín quy trình Trước - Trong - Sau bán hàng.<br> 
-			Nền tảng CRM đầu tiên mở rộng tính năng đa nhiệm kiểm soát mọi hoạt động
-			của doanh nghiệp.
+<header class="bg-light text-dark rounded-pill px-2 mb-5">
+	<div class="flex-col">
+		<div class="container text-center pt-2">
+			<h1 class="display-4 fw-bold pt-5">Quản lý khách hàng toàn
+				diện</h1>
+			<p class="lead">Nâng cao năng suất, đơn giản hóa quy trình và
+				phát triển doanh nghiệp của bạn với CRM.</p>
+			<a href="#" class="btn btn-primary btn-lg">Dùng thử ngay</a>
+		</div>
+		<div class="container text-center">
+			<img src="resources/Image/intro.png" alt="CRM Banner" class="img-fluid rounded">
 		</div>
 	</div>
+
 </header>
